; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_secure.c_sec_rsa_encrypt.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_secure.c_sec_rsa_encrypt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SEC_MAX_MODULUS_SIZE = common dso_local global i32 0, align 4
@SEC_EXPONENT_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32, i64, i32*, i32*)* @sec_rsa_encrypt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sec_rsa_encrypt(i32* %0, i32* %1, i32 %2, i64 %3, i32* %4, i32* %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i8*, align 8
  %19 = alloca i64, align 8
  %20 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32 %2, i32* %9, align 4
  store i64 %3, i64* %10, align 8
  store i32* %4, i32** %11, align 8
  store i32* %5, i32** %12, align 8
  %21 = load i32, i32* @SEC_MAX_MODULUS_SIZE, align 4
  %22 = zext i32 %21 to i64
  %23 = call i8* @llvm.stacksave()
  store i8* %23, i8** %18, align 8
  %24 = alloca i32, i64 %22, align 16
  store i64 %22, i64* %19, align 8
  %25 = load i32*, i32** %11, align 8
  %26 = load i64, i64* %10, align 8
  %27 = trunc i64 %26 to i32
  %28 = call i32 @reverse(i32* %25, i32 %27)
  %29 = load i32*, i32** %12, align 8
  %30 = load i32, i32* @SEC_EXPONENT_SIZE, align 4
  %31 = call i32 @reverse(i32* %29, i32 %30)
  %32 = load i32*, i32** %8, align 8
  %33 = load i32, i32* %9, align 4
  %34 = call i32 @memcpy(i32* %24, i32* %32, i32 %33)
  %35 = load i32, i32* %9, align 4
  %36 = call i32 @reverse(i32* %24, i32 %35)
  %37 = call i32* (...) @BN_CTX_new()
  store i32* %37, i32** %13, align 8
  %38 = call i32 @BN_init(i32* %14)
  %39 = call i32 @BN_init(i32* %15)
  %40 = call i32 @BN_init(i32* %16)
  %41 = call i32 @BN_init(i32* %17)
  %42 = load i32*, i32** %11, align 8
  %43 = load i64, i64* %10, align 8
  %44 = trunc i64 %43 to i32
  %45 = call i32 @BN_bin2bn(i32* %42, i32 %44, i32* %14)
  %46 = load i32*, i32** %12, align 8
  %47 = load i32, i32* @SEC_EXPONENT_SIZE, align 4
  %48 = call i32 @BN_bin2bn(i32* %46, i32 %47, i32* %15)
  %49 = load i32, i32* %9, align 4
  %50 = call i32 @BN_bin2bn(i32* %24, i32 %49, i32* %16)
  %51 = load i32*, i32** %13, align 8
  %52 = call i32 @BN_mod_exp(i32* %17, i32* %16, i32* %15, i32* %14, i32* %51)
  %53 = load i32*, i32** %7, align 8
  %54 = call i32 @BN_bn2bin(i32* %17, i32* %53)
  store i32 %54, i32* %20, align 4
  %55 = load i32*, i32** %7, align 8
  %56 = load i32, i32* %20, align 4
  %57 = call i32 @reverse(i32* %55, i32 %56)
  %58 = load i32, i32* %20, align 4
  %59 = sext i32 %58 to i64
  %60 = load i64, i64* %10, align 8
  %61 = icmp slt i64 %59, %60
  br i1 %61, label %62, label %72

62:                                               ; preds = %6
  %63 = load i32*, i32** %7, align 8
  %64 = load i32, i32* %20, align 4
  %65 = sext i32 %64 to i64
  %66 = getelementptr inbounds i32, i32* %63, i64 %65
  %67 = load i64, i64* %10, align 8
  %68 = load i32, i32* %20, align 4
  %69 = sext i32 %68 to i64
  %70 = sub nsw i64 %67, %69
  %71 = call i32 @memset(i32* %66, i32 0, i64 %70)
  br label %72

72:                                               ; preds = %62, %6
  %73 = call i32 @BN_free(i32* %17)
  %74 = call i32 @BN_clear_free(i32* %16)
  %75 = call i32 @BN_free(i32* %15)
  %76 = call i32 @BN_free(i32* %14)
  %77 = load i32*, i32** %13, align 8
  %78 = call i32 @BN_CTX_free(i32* %77)
  %79 = load i8*, i8** %18, align 8
  call void @llvm.stackrestore(i8* %79)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @reverse(i32*, i32) #2

declare dso_local i32 @memcpy(i32*, i32*, i32) #2

declare dso_local i32* @BN_CTX_new(...) #2

declare dso_local i32 @BN_init(i32*) #2

declare dso_local i32 @BN_bin2bn(i32*, i32, i32*) #2

declare dso_local i32 @BN_mod_exp(i32*, i32*, i32*, i32*, i32*) #2

declare dso_local i32 @BN_bn2bin(i32*, i32*) #2

declare dso_local i32 @memset(i32*, i32, i64) #2

declare dso_local i32 @BN_free(i32*) #2

declare dso_local i32 @BN_clear_free(i32*) #2

declare dso_local i32 @BN_CTX_free(i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
